syntax = "proto3";

package js.post;

service JsBridge {
  rpc OnFetch(FetchRequest) returns (FetchReply) {}
  rpc OnPass(PassRequest) returns (PassReply) {}
}

message JsRentPost {
  string name = 1;
  string phone = 2;
  string room_addr = 3;
  int32 room_area = 4;
  string room_type = 5;
  string room_orientation = 6;
  int32 room_floor = 7;
  string description = 8;
  int32 price = 9;
  string restriction = 10;
  string create_by = 11;
  string uuid = 12;
  string release_time = 13;
  repeated bytes pictures = 14;
}

message JsHelpPost {
  string name = 1;
  string phone = 2;
  string expected_addr = 3;
  int32 expected_price = 4;
  string demands = 5;
  string create_by = 6;
  string uuid = 7;
  string release_time = 8;
}

message PostPackage {
  repeated JsRentPost rent_posts = 1;
  repeated JsHelpPost help_posts = 2;
}

message FetchRequest {}

message FetchReply {
  optional PostPackage post_package = 1;
}

message PassRequest {
  string uuid = 1;
}

message PassReply {}
